syntax = "proto3";

package ddd;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.github.mojtabaj.data";
option java_outer_classname = "DragonsDiceDuelProto";

enum Faction {
  THE_GREENS = 0;
  THE_BLACKS = 1;
}

message PlayerData {
  int32 id = 1; //this id will create on join
  string player_name = 2; // name will insert by client side
  Faction faction = 3; // faction will insert by client side
  int32 score = 4; // current sore
  int32 attempt = 5; //current attempt
  int32 turns = 6; //played turns
}

message GameData{
  repeated PlayerData players = 1; //all player
  PlayerData winner = 2; //winner of game
}

message DiceData{
  PlayerData player = 1; //all player
  int32 dice = 2; //winner of game
}

message GameRequest {
  oneof action {
    PlayerData join_request = 1; //when player req for join
    DiceData dice = 2; //when player take action
  }
}

message GameResponse {
  oneof response {
    PlayerData joined = 1; //when player join
    PlayerData turns = 2; //when server says who's turns is it
    PlayerData played = 3; //when player dice (play action)
    GameData result = 4; //when game ends
  }
}



service DragonsDiceDuel {
  rpc PlayGame (stream GameRequest) returns (stream GameResponse);
}